@@ -4,7 +4,9 @@ Change History
 2.6 (unreleased)
 ----------------
 
-
+- Ignore exit status of compilezpy.py since it returns an
+  exit status > 0 for even a single compile failure.
+  [smcmahon]
 
 2.5 (2008-11-15)
 ----------------
